# phalus

./: .dockerignore  .eslintrc.json  .gitignore  CNAME  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  context7.json  docker-compose.yml  package.json  phalus-spec.md  pnpm-lock.yaml  pnpm-workspace.yaml  skills  zensical.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  docs.yml  release-binaries.yml  test.yml
api/: package.json
api/src/: index.test.ts  index.ts  security.test.ts  server.ts
api/src/middleware/: auth.ts  rate-limit.ts
api/src/routes/: licenses.ts  policies.ts  scans.ts
cli/: package.json  tsconfig.json
cli/src/: config.test.ts  config.ts  index.ts
core/: package.json  tsconfig.tsbuildinfo
core/src/: db.ts  index.ts  license-data.test.ts  license-data.ts  policy.test.ts  policy.ts  sbom.ts  scanner.test.ts  scanner.ts  schema.ts  types.ts
core/src/connectors/: cargo.ts  go.test.ts  go.ts  maven.test.ts  maven.ts  npm.ts  (+9 more)
docs/: api-reference.md  audit-trail.md  cli-reference.md  configuration.md  cookbook.md  docker.md  ecosystems.md  ethics.md  getting-started.md  index.md  pipeline.md  security.md  web-ui.md
docs/stylesheets/: extra.css
github-action/: action.yml  post-comment.mjs
licenses/: apache-2.0.txt  bsd-2.txt  bsd-3.txt  cc0.txt  isc.txt  mit.txt  unlicense.txt
src/: config.rs  lib.rs  main.rs  pipeline.rs
src/agents/: agent_b_executor.rs  agent_b_loop.rs  analyzer.rs  builder.rs  mod.rs  progress_journal.rs  provider.rs  symbiont_provider.rs
src/audit/: mod.rs
src/cache/: mod.rs
src/docs/: docs_site.rs  github.rs  mod.rs  source_guard.rs  type_defs.rs
src/firewall/: mod.rs
src/license/: mod.rs
src/manifest/: cargo.rs  gomod.rs  mod.rs  npm.rs  pypi.rs
src/registry/: crates.rs  golang.rs  mod.rs  npm.rs  pypi.rs
src/sbom/: mod.rs
src/scan/: mod.rs
src/store/: mod.rs
src/validator/: api_surface.rs  license_check.rs  mod.rs  similarity.rs  syntax.rs  test_runner.rs
src/web/: mod.rs  routes.rs
test-output/: audit.jsonl
test-output/left-pad/: LICENSE  README.md  index.d.ts  index.js  package.json  validation.json
tests/: agent_b_loop_test.rs  e2e_chalk.rs  e2e_is_odd.rs  e2e_left_pad.rs
(+16 files in other folders)
