[package]
name = "phalus"
version = "0.1.0"
edition = "2021"
license = "0BSD"
description = "Private Headless Automated License Uncoupling System"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
async-stream = "0.3"
futures-core = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
