[package]
name = "phalus"
version = "0.6.0"
edition = "2021"
license = "0BSD"
description = "Private Headless Automated License Uncoupling System — AI-powered clean room software reimplementation"
repository = "https://github.com/phalus-sh/phalus"
homepage = "https://phalus.sh"
readme = "README.md"
keywords = ["clean-room", "reimplementation", "license", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "process", "fs", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
base64 = "0.22"
async-stream = "0.3"
futures-core = "0.3"
axum = "0.8"
zip = "2"
flate2 = "1"
tar = "0.4"
openssl = { version = "0.10", features = ["vendored"], optional = true }
symbi-runtime = "1.9.0"
async-trait = "0.1"

[features]
vendored-openssl = ["openssl"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
